2014-10-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv:
	* Polypoint2D.wrl: 

2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* wrong2.wrl:
	* Smash.x3dv:
	* Extrusion.wrl:
	* wrong2-1-ok.wrl: 

2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-07  Holger Seelig  <holger.seelig@yahoo.de>

	* CADLayer.wrl: 

2014-10-07  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv:
	* SpiderMonkey-Inline.x3dv: 

2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Smash.x3dv: 

2014-10-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Smash.x3dv:
	* QuadSphere.wrl:
	* SpiderMonkey.x3dv:
	* SpiderMonkey-Inline.x3dv: 

2014-10-05  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Dimmly.x3dv: 

2014-10-04  Holger Seelig  <holger.seelig@yahoo.de>
