@@ -1,5 +1,9 @@
 2014-10-12  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* LineSet.cpp: 
+
+2014-10-12  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Text.h:
 	* Text.cpp:
 	* LineSet.h:
