@@ -1,5 +1,10 @@
 2014-10-12  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* Smash.x3dv:
+	* LineSet.wrl: 
+
+2014-10-12  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Smash.x3dv: 
 
 2014-10-11  Holger Seelig  <holger.seelig@yahoo.de>
